Update public inspection to use the shared search partials. Clean up some visual layout issues.

--- a/app/assets/stylesheets/design/search/_filters.scss
+++ b/app/assets/stylesheets/design/search/_filters.scss
@@ -19,7 +19,10 @@
         &.facet-name {
           display: block;
           float: left;
-          width: 160px;
+          margin-bottom: 10px;
+          margin-left: 10px;
+          text-indent: -10px;
+          width: 150px;
         }
       }
 
