--- a/app/assets/stylesheets/design/search/_results.scss
+++ b/app/assets/stylesheets/design/search/_results.scss
@@ -41,7 +41,7 @@
     }
   }
 
-  &.public-inspection {
+  &.public_inspection {
     .search-result-document {
       .icon-doctype { color: $color-public-inspection; }
     }
